auth/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-auth
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-auth
  template:
    metadata:
      labels:
        app: api-auth
    spec:
      containers:
        - name: api-auth
          image: dimaspratama04/api-auth:v1.1.0
          resources:
            limits:
              cpu: "256m"
              memory: "512Mi"
          ports:
            - containerPort: 8082
