auth/deployment/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-auth
  namespace: backend
spec:
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  selector:
    app: api-auth
